fix: add width to row text (OVERFLOW)

--- a/www/assets/main.css
+++ b/www/assets/main.css
@@ -342,6 +342,7 @@ body {
   }
 }
 .row {
+  width: 100%;
   margin-right: -15px;
   margin-left: -15px;
   display: flex;
